# fibonacci_experiment

./: .~lock.fibonacci_staircase.csv#  COMPLETION_SUMMARY.md  FAST_DOUBLING_UPGRADE.md  FIBONACCI_PROJECT_SUMMARY.md  GMPY2_ADDITION_SUMMARY.md  GMP_UPGRADE_SUMMARY.md  QUICK_START.md  README.md  TESTING_SUMMARY.md  binnets_formula.py  demo_exact_fibonacci.py  extra.ipynb  fibonacci_staircase.csv  fibonacci_staircase.py  overview.odt  test_fastdoubling_comparison.py  testing_time_fib.py  testing_time_fib_gmp.py
cpp_version/: Makefile  PERFORMANCE.md  README.md  SUMMARY.md  USAGE.md  benchmark.sh  benchmark_comparison.sh  fib_stairs  fib_stairs.cpp  fib_stairs_fastdoubling  fib_stairs_fastdoubling.cpp  quick_benchmark.sh  verify  verify.cpp
fastfib/: INSTALL_AND_USE.md  MANIFEST.in  PYTHON_USAGE.md  README.md  demo.py  fib_bindings.cpp  fib_bindings_fastdoubling.cpp  fib_bindings_matrix_backup.cpp  pyproject.toml  setup.py  setup_fastdoubling.py  test_fastfib.py  test_gmp.py
fastfib/fastfib/: __init__.py
fastfib/fastfib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
