[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastfib"
version = "1.0.0"
description = "Ultra-fast Fibonacci computation using C++ and Binet's formula"
readme = "README.md"
authors = [
    {name = "FastFib Contributors"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.19.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/fastfib"

